--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "typescript": "~3.9.7"
   },
   "dependencies": {
+    "@aws-cdk/aws-cloudtrail": "^1.124.0",
+    "@aws-cdk/aws-logs": "^1.124.0",
     "@aws-cdk/core": "1.121.0",
     "source-map-support": "^0.5.16"
   }
